Implemented conditional Auth views and render

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,77 +1,65 @@
 @model LoginViewModel
 
-@section title {
-    <h3 class="my-4">Iniciar sesion</h3>
-    <tr class="my-2"></tr>
+@{
+    Layout = "_AuthLayout";
 }
 
-@if (ViewData.ModelState.IsValid && ViewData.ModelState.Keys.Any(k => k.Contains("Password")))
-{
-    <div class="alert alert-danger" role="alert">
-        <p>No se pudo registrar esta cuenta. Verifique que su password tenga:</p>
-        <ul>
-            <li>Al menos 6 caracteres</li>
-            <li>Letras en mayuscula</li>
-            <li>Letras en minuscula</li>
-            <li>Numeros</li>
-            <li>Caracteres especiales (!, *, -, _, .)</li>
-        </ul>
-    </div>
-}
+<div class="col-lg-6 col-md-8 col-xs-10 border border-dark p-5 bg-light rounded-3 d-flex flex-column gap-2">
 
-<form asp-action="login">
-    @if (!ViewData.ModelState.IsValid)
+    <h3 class="text-center">Iniciar sesion</h3>
+    <hr>
+
+    @if (ViewData.ModelState.IsValid && ViewData.ModelState.Keys.Any(k => k.Contains("Password")))
     {
-        <div class="alert alert-danger" asp-validation-summary="All"></div>
+        <div class="alert alert-danger" role="alert">
+            <p>No se pudo registrar esta cuenta. Verifique sus datos</p>
+        </div>
     }
 
-    <div class="my-4">
-        <div class="row mb-1 col-12 mx-auto">
-            <div class="col-lg-2 col-md-3 col-sm-4">
-                <label asp-for="Email" class="col-form-label text-end">Email</label>
-            </div>
-            <div class="col-lg-10 col-md-9 col-sm-8">
-                <input type="text" asp-for="Email" class="form-control">
-            </div>
-        </div>
-        <div class="col-12 mx-2 row">
-            <span class="text-danger" asp-validation-for="Email"></span>
-        </div>
-    </div>
+    <form method="post" asp-controller="account" asp-action="login">
+        @if (!ViewData.ModelState.IsValid)
+        {
+            <div class="alert alert-danger" asp-validation-summary="All"></div>
+        }
 
-    <div class="my-4">
-        <div class="row mb-1 col-12 mx-auto">
-            <div class="col-lg-2 col-md-3 col-sm-4">
-                <label asp-for="Password" class="col-form-label text-end">Contraseña</label>
+        <div class="my-4">
+            <div class="row mb-1 col-12 mx-auto align-items-center">
+                <div class="col-md-3 col-sm-4">
+                    <label asp-for="Email" class="col-form-label text-end">Email</label>
+                </div>
+                <div class="col-md-9 col-sm-8">
+                    <input type="text" asp-for="Email" class="form-control border-dark">
+                </div>
             </div>
-            <div class="col-lg-10 col-md-9 col-sm-8">
-                <input type="password" asp-for="Password" class="form-control">
+            <div class="col-12 mx-2 row">
+                <span class="text-danger" asp-validation-for="Email"></span>
             </div>
         </div>
-        <div class="col-12 mx-2 row">
-            <span class="text-danger" asp-validation-for="Password"></span>
-        </div>
-    </div>
 
-    @* <div class="my-4">
-    <div class="row mb-1 col-12 mx-auto">
-    <div class="col-lg-2 col-md-3 col-sm-4">
-    <label asp-for="Product.Price" class="col-form-label text-end">Confirmar contraseña</label>
-    </div>
-    <div class="col-lg-10 col-md-9 col-sm-8">
-    <input type="text" asp-for="Product.Price" class="form-control">
-    </div>
-    </div>
-    <div class="col-12 mx-2 row">
-    <span class="text-danger" asp-validation-for="Product.Price"></span>
-    </div>
-    </div> *@
-
-    <div class="row mt-5 justify-content-between gap-2">
-        <div class="col d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary rounded-pill" style="width: 120px;">
-                <span style="margin-left: 8px; fs-6">Iniciar sesion</span>
-            </button>
+        <div class="my-4">
+            <div class="row mb-1 col-12 mx-auto align-items-center">
+                <div class="col-md-3 col-sm-4">
+                    <label asp-for="Password" class="col-form-label text-start">Contraseña</label>
+                </div>
+                <div class="col-md-9 col-sm-8">
+                    <input type="password" asp-for="Password" class="form-control border-dark">
+                </div>
+            </div>
+            <div class="col-12 mx-2 row">
+                <span class="text-danger" asp-validation-for="Password"></span>
+            </div>
         </div>
-    </div>
-</form>
+
+        <div class="row mt-5 justify-content-between gap-2">
+            <div class="col d-flex justify-content-center">
+                <button type="submit" class="btn btn-dark rounded-pill pill-button-200">
+                    <span style="margin-left: 8px; fs-6">Iniciar sesion</span>
+                </button>
+            </div>
+        </div>
+
+        <p class="pt-4 mb-0 text-end small">Si todavia no estas registrado, <a href="/register">crea tu cuenta</a>
+        </p>
+    </form>
+
+</div>
