--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,15 +123,19 @@
                         </a>
                     </li>
 
-                    <li class="nav-item m-1">
-                        <a href="#" class="btn btn-outline-light d-flex align-items-center border-0 w-100"
-                            style="text-decoration: none;">
-                            <i class="bi bi-person-fill-gear fs-5"></i>
-                            <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Account Settings</span>
-                            </div>
-                        </a>
-                    </li>
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <li class="nav-item m-1">
+                            <a asp-controller="employees" asp-action="details" asp-route-id="@currentUser.Id"
+                                class="btn btn-outline-light d-flex align-items-center border-0 w-100"
+                                style="text-decoration: none;">
+                                <i class="bi bi-person-fill-gear fs-5"></i>
+                                <div class="span" style="margin-left: 12px; display: none;">
+                                    <span class="fs-5">Account Settings</span>
+                                </div>
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
 
