Added dashboard and chartjs plot

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -53,12 +53,12 @@
         <div class="row mt-5 justify-content-between gap-2">
             <div class="col d-flex justify-content-center">
                 <button type="submit" class="btn btn-dark rounded-pill pill-button-200">
-                    <span style="margin-left: 8px; fs-6">Iniciar sesion</span>
+                    <span>Iniciar sesion</span>
                 </button>
             </div>
         </div>
 
-        <p class="pt-4 mb-0 text-end small">Si todavia no estas registrado, <a href="/register">crea tu cuenta</a>
+        <p class="pt-4 mb-0 text-end small">Si todavia no estas registrado, <a asp-action="register">crea tu cuenta</a>
         </p>
     </form>
 
