--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -74,7 +74,7 @@
         <div class="row mt-5 justify-content-between gap-2">
             <div class="col d-flex justify-content-center">
                 <button type="submit" class="btn btn-dark rounded-pill pill-button-200">
-                    <span style="margin-left: 8px; fs-6">Crear cuenta</span>
+                    <span>Crear cuenta</span>
                 </button>
             </div>
         </div>
