--- a/Views/Sales/Index.cshtml
+++ b/Views/Sales/Index.cshtml
@@ -1,3 +1,8 @@
+@inject UserManager<AppUser> UserManager
+@{
+    var currentUser = await UserManager.GetUserAsync(User);
+}
+
 @model SalesViewModel
 
 @section title {
@@ -26,7 +31,7 @@
         @* Product *@
         <form method="post" id="form-sale">
             @* hidden user id hardcoded *@
-            <input asp-for="UserId" type="hidden" value="Tony" />
+            <input asp-for="UserId" type="hidden" value="@currentUser.Id" />
             <input asp-for="ProductId" type="hidden">
             <div>
                 <div class="m-2 d-flex gap-2">
@@ -43,7 +48,7 @@
     <div class="col-7 mx-2 d-flex flex-column">
         @* Table *@
         <div id="sales-items" class="w-100 my-2">
-            @await Component.InvokeAsync("Sales", "Tony")
+            @await Component.InvokeAsync("Sales", @currentUser.Id)
         </div>
 
         @* Summary *@
