--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,3 @@
-@using Microsoft.AspNetCore.Identity
-
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
 
@@ -16,6 +14,7 @@
     <title>Pharmalardo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="~/css/site.css">
 </head>
 
 <body>
@@ -48,7 +47,7 @@
                             style="text-decoration: none;">
                             <i class="bi bi-people-fill"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">People</span>
+                                <span class="fs-6">Empleados</span>
                             </div>
                         </a>
                     </li>
@@ -58,7 +57,7 @@
                             style="text-decoration: none;">
                             <i class="bi bi-tags fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Brands</span>
+                                <span class="fs-6">Marcas</span>
                             </div>
                         </a>
                     </li>
@@ -68,7 +67,7 @@
                             style="text-decoration: none;">
                             <i class="bi bi-inboxes-fill fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Categories</span>
+                                <span class="fs-6">Categorias</span>
                             </div>
                         </a>
                     </li>
@@ -78,7 +77,7 @@
                             style="text-decoration: none;">
                             <i class="bi bi-prescription2 fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Subcategories</span>
+                                <span class="fs-5">Subcategorias</span>
                             </div>
                         </a>
                     </li>
@@ -108,7 +107,7 @@
                             style="text-decoration: none;">
                             <i class="bi bi-coin"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Sell</span>
+                                <span class="fs-5">Vender</span>
                             </div>
                         </a>
                     </li>
@@ -118,7 +117,7 @@
                             style="text-decoration: none;">
                             <i class="bi bi-receipt fs-5"></i>
                             <div class="span" style="margin-left: 12px; display: none;">
-                                <span class="fs-5">Transactions</span>
+                                <span class="fs-5">Transacciones</span>
                             </div>
                         </a>
                     </li>
@@ -131,7 +130,7 @@
                                 style="text-decoration: none;">
                                 <i class="bi bi-person-fill-gear fs-5"></i>
                                 <div class="span" style="margin-left: 12px; display: none;">
-                                    <span class="fs-5">Account Settings</span>
+                                    <span class="fs-5">Modificar perfil</span>
                                 </div>
                             </a>
                         </li>
@@ -147,7 +146,7 @@
                         style="text-decoration: none;">
                         <i class="bi bi-box-arrow-left fs-5"></i>
                         <div class="span" style="margin-left: 12px; display: none;">
-                            <span class="fs-5">Log out</span>
+                            <span class="fs-5">Cerrar sesion</span>
                         </div>
                     </a>
                 </div>
@@ -165,9 +164,17 @@
 
 
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <h5 class="text-white">Hello username</h5>
-                    <img src="https://cdn2.picryl.com/photo/1976/12/31/luis-alberto-spinetta-en-1976-0cb1df-640.jpg"
-                        alt="profile picture" width="50px" height="50px" style="border-radius: 50%; margin-left: 8px" />
+                    <h5 class="text-white">Hola @(currentUser.UserName)</h5>
+                    @if (!string.IsNullOrEmpty(currentUser.PictureUrl))
+                    {
+                        <img src="@currentUser.PictureUrl" alt="profile picture" width="50px" height="50px"
+                            style="border-radius: 50%; margin-left: 16px; margin-right: 8px" />
+                    }
+                    else
+                    {
+                        <img src="~/assets/default-profile.jpg" alt="profile picture" width="50px" height="50px"
+                            style="border-radius: 50%; margin-left: 16px; margin-right: 8px" />
+                    }
                 </div>
 
             </div>
