--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -6,7 +6,7 @@
     background-position:center;
     background-size: cover;
     /* background-image: linear-gradient(0deg, rgba(0, 125, 118, 0.7), rgba(0, 167, 157, 0.9)), url("https://images.unsplash.com/photo-1576091358783-a212ec293ff3?q=80&w=1625&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
-    background-image: linear-gradient(0deg, rgba(0, 125, 118, 0.7), rgba(0, 167, 157, 0.9)), url("../assets/BgImg.jpg");
+    background-image: linear-gradient(0deg, rgba(0, 125, 118, 0.7), rgba(0, 167, 157, 0.9)), url("../assets/auth-bg.jpg");
 }
 
 .pill-button-200 {
@@ -17,4 +17,14 @@
 .pill-button-120 {
     width: 200px;
     background-color: #008980;
+}
+
+.dashboard-card {
+    text-decoration: none;
+    i {
+        font-size: 48px;
+    }
+    p {
+        font-weight: 600;
+    }
 }
